# sparseinst_ncnn_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: common.h
src/: common.cc  main.cc
